fixed alignment on docs

--- a/themes/hugo-advance/assets/scss/pages/docs/_docs-summary.scss
+++ b/themes/hugo-advance/assets/scss/pages/docs/_docs-summary.scss
@@ -7,20 +7,25 @@
     border: none;
     @include whitebox();
     width: 300px;
-    height: 400px;
+    height: 450px;
+  }
+  .card:hover {
+    svg{
+      fill: #28AE61;
+    }
+
   }
 
   .svg-image {
+    padding: 5px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 8%;
-    width: 80%;
+    margin-top: 15px;
     stroke: #28AE61;
     stroke-width: 4px;
-    // fill: #28AE61;
+    height: 150px;
+    width: 150px;
     fill: white;
   }
-  .svg-image:hover {
-    fill: #28AE61;
-  }
+
 }
